# matrix

./: .gitignore  AGENTS.md  Concepts.md  PHASE1_PLAN.md  README.md  pyproject.toml
agents/assistant/: agent.yaml
agents/assistant/prompts/: system.md
matrix/: __init__.py  __main__.py
matrix/channels/: base.py  web.py
matrix/core/: agent.py  envelope.py  harness.py  inbox.py  registry.py  session_manager.py  threads.py
matrix/providers/: base.py  claude_code.py
matrix/transcripts/: reader.py
matrix/web/static/: app.js  index.html  styles.css
